--- a/Validation Modified.ipynb
+++ b/Validation Modified.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -23,16 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_json('/Users/alexanderdowney/Downloads/winemag-data_first150k.json')"
+    "df = pd.read_json('C:/Users/Eason/Downloads/winemag-data_first150k.json/winemag-data_first150k.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1188,7 @@
        "[150930 rows x 10 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1307,6 +1309,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def Wine_LinLstSq_Regression_QF(Xtrain,Xtest,Ytrain):\n",
+    "    w,resdiuals,rank,singular_vals = np.linalg.lstsq(Xtrain, Ytrain)\n",
+    "    w_matrix = np.transpose(np.asmatrix(w))\n",
+    "    w_array = np.squeeze(np.asarray(Xtest*w_matrix))\n",
+    "    return w_array # Returns the prediction vector"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1315,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -1328,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -1347,22 +1364,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.53325117118053555"
+       "0.53318894011386031"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "R2_score((Wine_Decision_Tree_Regression_QF(X_train,X_test,y_train)),y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.27612856045794587"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R2_score((Wine_LinLstSq_Regression_QF(X_train,X_test,y_train)),y_test)"
    ]
   },
   {
@@ -1381,32 +1418,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.211482673849\n",
-      "0.523639733194\n",
-      "0.17704863333\n",
-      "0.550382447276\n",
-      "0.501903944026\n",
-      "0.580407632871\n",
-      "0.460117114233\n",
-      "0.438513556278\n",
-      "0.535428968663\n",
-      "0.488789001954\n"
+      "0.210893944844\n",
+      "0.523850666848\n",
+      "0.177200610047\n",
+      "0.527898104625\n",
+      "0.50002328685\n",
+      "0.579740022631\n",
+      "0.460139076228\n",
+      "0.438472575606\n",
+      "0.535115523446\n",
+      "0.490217834946\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.44677137056739902"
+       "0.44435516460687785"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -1464,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -1480,6 +1517,24 @@
     "    score = metrics.mean_absolute_error(y_test,y_pred)\n",
     "    return"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1507,7 +1562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
