--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -9,7 +9,10 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "import json"
    ]
   },
   {
@@ -214,6 +217,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(\"df\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## array of strings, 1 x n \n",
+    "descriptions = df[\"description\"].tolist()\n",
+    "\n",
+    "## array of ints, 1 x n\n",
+    "prices = df[\"price\"].tolist()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -229,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -289,42 +318,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'textblob'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-858aad533cba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0mtextblob\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTextBlob\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mtextBlob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     '''\n\u001b[1;32m      4\u001b[0m     Sentiment object being calculated in API contains {\n\u001b[1;32m      5\u001b[0m             \u001b[0msubjectivity\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'textblob'"
-     ]
+     "data": {
+      "text/plain": [
+       "-3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from textblob import TextBlob\n",
-    "def textBlob(sentence):\n",
-    "    '''\n",
-    "    Sentiment object being calculated in API contains {\n",
-    "            subjectivity: [0,1], \n",
-    "            polarity: [-1,1] }\n",
-    "    This algorithm maps the polarity score to separate pos, neu, neg values.\n",
-    "    If polarity is positive, the 'neg' value will be 0 and the pos and neu values will reflect magnitude of polarity;\n",
-    "    same idea used for if polarity is negative.\n",
-    "    '''\n",
-    "    textObj = TextBlob(sentence)\n",
-    "    score = textObj.sentiment.polarity\n",
-    "    if score > 0:\n",
-    "        return [score,1-score,0.]\n",
-    "    elif score < 0:\n",
-    "        return [0.,1+score,-score]\n",
-    "    else:\n",
-    "        return [0.,1.,0.]"
+    "sentimentAfinn(\"This wine is so bad it made me vomit.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 0.64, 0.36]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentimentVader(\"This wine is so bad it made me vomit.\")"
    ]
   },
   {
@@ -342,27 +375,18 @@
    },
    "outputs": [],
    "source": [
-    "sentiments_afinn = list(map(sentimentAfinn,descriptions))\n",
-    "sentiments_vader = list(map(sentimentVader,descriptions))"
+    "sentiments_afinn = list(map(sentimentAfinn,descriptions))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(sentiments_afinn)\n"
+    "sentiments_vader = list(map(sentimentVader,descriptions))"
    ]
   },
   {
@@ -376,12 +400,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.483, 0.517, 0.0], [0.385, 0.615, 0.0]]\n"
+      "[5, 3, 0, 2, 1, 5, 0, 0]\n",
+      "129964\n"
      ]
     }
    ],
    "source": [
-    "print(sentiments_vader)"
+    "print(sentiments_afinn[0:8])\n",
+    "print(len(sentiments_afinn))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.232, 0.768, 0.0], [0.135, 0.865, 0.0], [0.142, 0.858, 0.0], [0.03, 0.97, 0.0], [0.076, 0.924, 0.0], [0.177, 0.823, 0.0], [0.07, 0.93, 0.0], [0.074, 0.926, 0.0]]\n",
+      "129964\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sentiments_vader[0:8])\n",
+    "print(len(sentiments_vader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('sentiment_sums.json', 'w') as outfile:\n",
+    "    json.dump(sentiments_afinn, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('sentiment_probabilities.json', 'w') as outfile:\n",
+    "    json.dump(sentiments_vader, outfile)"
    ]
   },
   {
