--- a/Validation Modified.ipynb
+++ b/Validation Modified.ipynb
@@ -25,16 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "df = pd.read_json('C:/Users/Eason/Downloads/winemag-data_first150k.json/winemag-data_first150k.json')"
+    "df = pd.read_json('/Users/alexanderdowney/Downloads/winemag-data_first150k.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1190,7 @@
        "[150930 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -1246,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1262,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -1290,7 +1292,24 @@
     "    for j in range(0,len(variety)):\n",
     "        X = np.c_[X,variety[j]]\n",
     "    X = np.c_[X,np.ones(len(df['points']))]\n",
+    "    X = np.c_[X,sent_sums]\n",
+    "    X = np.c_[X,sent_prob]\n",
     "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def Wine_Decision_Tree_Regression(Xtrain,Xtest,Ytrain):\n",
+    "    clf = tree.DecisionTreeRegressor()\n",
+    "    # useful code: min_samples_leaf=10,max_depth=3,max_leaf_nodes = 100\n",
+    "    clf = clf.fit(Xtrain, Ytrain)\n",
+    "    return clf.predict(Xtest) # Returns the prediction vector"
    ]
   },
   {
@@ -1301,22 +1320,7 @@
    },
    "outputs": [],
    "source": [
-    "def Wine_Decision_Tree_Regression_QF(Xtrain,Xtest,Ytrain):\n",
-    "    clf = tree.DecisionTreeRegressor()\n",
-    "    # useful code: min_samples_leaf=10,max_depth=3,max_leaf_nodes = 100\n",
-    "    clf = clf.fit(Xtrain, Ytrain)\n",
-    "    return clf.predict(Xtest) # Returns the prediction vector"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def Wine_LinLstSq_Regression_QF(Xtrain,Xtest,Ytrain):\n",
+    "def Wine_LinLstSq_Regression(Xtrain,Xtest,Ytrain):\n",
     "    w,resdiuals,rank,singular_vals = np.linalg.lstsq(Xtrain, Ytrain)\n",
     "    w_matrix = np.transpose(np.asmatrix(w))\n",
     "    w_array = np.squeeze(np.asarray(Xtest*w_matrix))\n",
@@ -1332,6 +1336,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sent_sums = pd.read_json('/Users/alexanderdowney/Downloads/sentiment_sums.json')\n",
+    "sent_prob = pd.read_json('/Users/alexanderdowney/Downloads/sentiment_probabilities.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": true
@@ -1341,6 +1357,23 @@
     "X = Transform_df_to_X(df)\n",
     "data = X\n",
     "target = df['price'].as_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "csvfile = \"/Users/alexanderdowney/Desktop/winedata.csv\"\n",
+    "\n",
+    "with open(csvfile, \"w\") as output: \n",
+    "    writer = csv.writer(output, lineterminator ='\\n')\n",
+    "    writer.writerows(X)"
    ]
   },
   {
@@ -1370,7 +1403,7 @@
     {
      "data": {
       "text/plain": [
-       "0.53318894011386031"
+       "0.47372916179154145"
       ]
      },
      "execution_count": 12,
@@ -1379,27 +1412,7 @@
     }
    ],
    "source": [
-    "R2_score((Wine_Decision_Tree_Regression_QF(X_train,X_test,y_train)),y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.27612856045794587"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "R2_score((Wine_LinLstSq_Regression_QF(X_train,X_test,y_train)),y_test)"
+    "R2_score((Wine_Decision_Tree_Regression(X_train,X_test,y_train)),y_test)"
    ]
   },
   {
@@ -1420,77 +1433,94 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.210893944844\n",
-      "0.523850666848\n",
-      "0.177200610047\n",
-      "0.527898104625\n",
-      "0.50002328685\n",
-      "0.579740022631\n",
-      "0.460139076228\n",
-      "0.438472575606\n",
-      "0.535115523446\n",
-      "0.490217834946\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.44435516460687785"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scores = []\n",
-    "for k in range(0, 10):\n",
-    "    X_tr, X_te, y_tr, y_te = train_test_split(X_train, y_train, test_size=0.1, random_state=k)\n",
-    "    train_data_input = X_tr\n",
-    "    train_data_output = y_tr\n",
-    "    test_data_input = X_te\n",
-    "    y_pred = Wine_Decision_Tree_Regression_QF(train_data_input, test_data_input, train_data_output)\n",
-    "    print(R2_score(y_pred,y_te))\n",
-    "    scores.append(R2_score(y_pred,y_te))\n",
-    "np.mean(scores)"
+    "def test_cv(model):\n",
+    "    scores = []\n",
+    "    for k in range(0, 10):\n",
+    "        X_tr, X_te, y_tr, y_te = train_test_split(X_train, y_train, test_size=0.1, random_state=k)\n",
+    "        train_data_input = X_tr\n",
+    "        train_data_output = y_tr\n",
+    "        test_data_input = X_te\n",
+    "        y_pred = model(train_data_input, test_data_input, train_data_output)\n",
+    "        print(R2_score(y_pred,y_te))\n",
+    "        scores.append(R2_score(y_pred,y_te))\n",
+    "    return np.mean(scores)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.100960355601\n",
+      "0.406386567216\n",
+      "0.265918593529\n",
+      "0.0194659989482\n",
+      "0.265870778603\n",
+      "0.455793422758\n",
+      "0.432493533867\n",
+      "0.185833759966\n",
+      "0.219300443454\n",
+      "0.432128403641\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.2784151857583162"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# input: model (function), train set (numpy matrix)\n",
-    "# output: cross validated absolute loss\n",
-    "def cross_validate(model):\n",
-    "    scores = np.empty(0)\n",
-    "    for k in range(0, 10):\n",
-    "        X_tr, X_te, y_tr, y_te = train_test_split(X_train, y_train, test_size=0.1, random_state=k)\n",
-    "        train_data = pd.DataFrame(X_tr, columns=features)\n",
-    "        train_data = train_data.assign(price = y_tr)\n",
-    "        test_data = pd.DataFrame(X_te, columns=features)\n",
-    "        y_pred = model(train_data, test_data)\n",
-    "        np.append(scores, metrics.mean_absolute_error(y_te,y_pred))\n",
-    "    return np.mean(scores)"
+    "test_cv(Wine_Decision_Tree_Regression)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.270157208427\n",
+      "0.28758882131\n",
+      "0.262638734211\n",
+      "0.27689905648\n",
+      "0.232723032636\n",
+      "0.278917577863\n",
+      "0.284375315313\n",
+      "0.289681236346\n",
+      "0.318135185534\n",
+      "0.294496843054\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.27956130111742639"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_cv(Wine_LinLstSq_Regression)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1501,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -1510,40 +1540,53 @@
     "# input: model (function), test set (numpy matrix)\n",
     "# output: absolute loss\n",
     "def test_score(model):\n",
-    "    train_data = pd.DataFrame(X_train, columns=features)\n",
-    "    train_data = train_data.assign(price = y_test)\n",
-    "    test_data = pd.DataFrame(X_test, columns=features)\n",
-    "    y_pred = model(train_data, test_data)\n",
+    "    train_data_input = X_train\n",
+    "    train_data_output = y_train\n",
+    "    test_data_input = X_test\n",
+    "    y_pred = model(train_data_input, test_data_input, train_data_output)\n",
     "    score = metrics.mean_absolute_error(y_test,y_pred)\n",
-    "    return"
+    "    return score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.7044701246644536"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_score(Wine_Decision_Tree_Regression)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.044667582864509"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_score(Wine_LinLstSq_Regression)"
+   ]
   }
  ],
  "metadata": {
@@ -1562,7 +1605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
