Includes Random Forest

--- a/Final Project (Python).ipynb
+++ b/Final Project (Python).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,9 @@
     "import matplotlib.pyplot as py\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
-    "from sklearn import tree"
+    "from sklearn import tree\n",
+    "import sklearn\n",
+    "from sklearn import ensemble"
    ]
   },
   {
@@ -2523,6 +2525,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def Wine_Random_Forest_Regression(Xtrain, Xtest, Ytrain):\n",
+    "    rfr = sklearn.ensemble.RandomForestRegressor()\n",
+    "    rfr = rfr.fit(Xtrain, Ytrain)\n",
+    "    return rfr.predict(Xtest)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2599,13 +2615,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This still needs some attention, but it should be a quick fix. Example of one run is below:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -2630,7 +2639,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2662,6 +2671,42 @@
    ],
    "source": [
     "test_cv(Wine_Decision_Tree_Regression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.619497202272\n",
+      "0.568407008769\n",
+      "0.590564310941\n",
+      "0.517306067095\n",
+      "0.691262731614\n",
+      "0.663604408799\n",
+      "0.622966585741\n",
+      "0.497795022386\n",
+      "0.574970769924\n",
+      "0.587760485194\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.59341345927343758"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_cv(Wine_Random_Forest_Regression)"
    ]
   },
   {
@@ -2749,6 +2794,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5620340050091176"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_score(Wine_Random_Forest_Regression)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -2764,7 +2829,7 @@
     }
    ],
    "source": [
-    "test_score(Wine_LinLstSq_Regression)"
+    "test_score(Wine_Random_Forest_Regression)"
    ]
   },
   {
