--- a/Final Project (Python).ipynb
+++ b/Final Project (Python).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -28,18 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_json('/Users/alexanderdowney/Downloads/winemag-data_first150k.json')"
+    "df = pd.read_json('C:/Users/Eason/Downloads/winemag-data_first150k.json/winemag-data_first150k.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1191,7 @@
        "[150930 rows x 10 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,8 +1209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "regions = df['region_1'].unique()\n",
@@ -1228,8 +1228,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "countries = df['country'].unique()\n",
@@ -1266,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2420,7 +2422,7 @@
        "[111244 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2438,8 +2440,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def R2_score(y_pred,y_true):\n",
@@ -2452,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -2495,23 +2499,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def Wine_Decision_Tree_Regression(Xtrain,Xtest,Ytrain):\n",
-    "    clf = tree.DecisionTreeRegressor()\n",
-    "    # useful code: min_samples_leaf=10,max_depth=3,max_leaf_nodes = 100\n",
-    "    clf = clf.fit(Xtrain, Ytrain)\n",
-    "    return clf.predict(Xtest) # Returns the prediction vector"
+    "### Linear Models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -2526,7 +2522,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def Wine_Huber_Linear_Regression(Xtrain, Xtest, Ytrain):\n",
+    "    hlr = sklearn.Linear_Model.HuberRegressor()\n",
+    "    hlr = hlr.fit(Xtrain, Ytrain)\n",
+    "    return hlr.predict(Xtest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trees"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def Wine_Decision_Tree_Regression(Xtrain,Xtest,Ytrain):\n",
+    "    clf = tree.DecisionTreeRegressor()\n",
+    "    # useful code: min_samples_leaf=10,max_depth=3,max_leaf_nodes = 100\n",
+    "    clf = clf.fit(Xtrain, Ytrain)\n",
+    "    return clf.predict(Xtest) # Returns the prediction vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -2539,6 +2571,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Wine_Huber_Tree_Regression(Xtrain, Xtest, Ytrain):\n",
+    "    htr = sklearn.ensemble.GradientBoostingRegressor(loss='ls')\n",
+    "    htr = htr.fit(Xtrain, Ytrain)\n",
+    "    return htr.predict(Xtest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def Wine_SVM_Regression(Xtrain, Xtest, Ytrain):\n",
+    "    svr = sklearn.svm.SVR()\n",
+    "    svr = svr.fit(Xtrain, Ytrain)\n",
+    "    return svr.predict(Xtest)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2547,20 +2612,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sent_sums = pd.read_json('/Users/alexanderdowney/Downloads/sentiment_sums.json')\n",
-    "sent_prob = pd.read_json('/Users/alexanderdowney/Downloads/sentiment_probabilities.json')"
+    "sent_sums = pd.read_json('C:/Users/Eason/Downloads/sentiment_sums.json')\n",
+    "sent_prob = pd.read_json('C:/Users/Eason/Downloads/sentiment_probabilities.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = Transform_df_to_X(df)\n",
@@ -2570,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -2589,16 +2656,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.54507180052797266"
+       "0.54505233710434298"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2616,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -2633,6 +2700,53 @@
     "        print(R2_score(y_pred,y_te))\n",
     "        scores.append(R2_score(y_pred,y_te))\n",
     "    return np.mean(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.519934595656\n",
+      "-6879102724.53\n",
+      "-3.4591229545e+14\n",
+      "0.46005117054\n",
+      "-0.00452853427182\n",
+      "0.395887701039\n",
+      "-2.40044292135e+14\n",
+      "0.377584540786\n",
+      "-41131133893.6\n",
+      "0.408232767257\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-58600459782138.859"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_cv(Wine_LinLstSq_Regression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_cv(Wine_Huber_Linear_Regression)"
    ]
   },
   {
@@ -2711,38 +2825,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.519934595656\n",
-      "-6879102724.53\n",
-      "-3.4591229545e+14\n",
-      "0.46005117054\n",
-      "-0.00452853427182\n",
-      "0.395887701039\n",
-      "-2.40044292135e+14\n",
-      "0.377584540786\n",
-      "-41131133893.6\n",
-      "0.408232767257\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-58600459782138.859"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "test_cv(Wine_LinLstSq_Regression)"
+    "test_cv(Wine_Huber_Tree_Regression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_cv(Wine_SVM_Regression)"
    ]
   },
   {
@@ -2869,7 +2969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
