--- a/Final Project (Python).ipynb
+++ b/Final Project (Python).ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -16,7 +14,8 @@
     "from sklearn import metrics\n",
     "from sklearn import tree\n",
     "import sklearn\n",
-    "from sklearn import ensemble"
+    "from sklearn import ensemble\n",
+    "from sklearn import linear_model"
    ]
   },
   {
@@ -28,16 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "df = pd.read_json('C:/Users/Eason/Downloads/winemag-data_first150k.json/winemag-data_first150k.json')"
+    "df = pd.read_json('/Users/alexanderdowney/Downloads/winemag-data_first150k.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1192,7 @@
        "[150930 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,10 +1210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "regions = df['region_1'].unique()\n",
@@ -1228,10 +1227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "countries = df['country'].unique()\n",
@@ -1268,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2422,7 +2419,7 @@
        "[111244 rows x 10 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2440,10 +2437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def R2_score(y_pred,y_true):\n",
@@ -2456,7 +2451,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def report_metrics(y_pred, y_true):\n",
+    "    m1 = metrics.mean_absolute_error(y_true, y_pred)\n",
+    "    m2 = metrics.median_absolute_error(y_true,y_pred)\n",
+    "    m3 = metrics.explained_variance_score(y_true,y_pred)\n",
+    "    m4 = metrics.r2_score\n",
+    "    print(\"Mean Absolute Error:\",m1,\"| Median Absolute Error:\", m2,\"| Explain Variance Score:\", m3,\"| R2 Score:\",m4)\n",
+    "    return m1,m2,m3,m4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -2492,8 +2504,8 @@
     "        X = np.c_[X,variety[j]]\n",
     "    for j in range(0,len(region)):\n",
     "        X = np.c_[X,region[j]]\n",
-    "#    X = np.c_[X,sent_sums]\n",
-    "#    X = np.c_[X,sent_prob]\n",
+    "    X = np.c_[X,sent_sums]\n",
+    "    X = np.c_[X,sent_prob]\n",
     "    X = np.c_[X,np.ones(len(df['points']))]\n",
     "    return X"
    ]
@@ -2502,12 +2514,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear Models"
+    "# Linear Models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -2522,14 +2534,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def Wine_Huber_Linear_Regression(Xtrain, Xtest, Ytrain):\n",
-    "    hlr = sklearn.Linear_Model.HuberRegressor()\n",
+    "    hlr = sklearn.linear_model.HuberRegressor()\n",
     "    hlr = hlr.fit(Xtrain, Ytrain)\n",
     "    return hlr.predict(Xtest)"
    ]
@@ -2538,12 +2550,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trees"
+    "# Trees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -2558,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -2572,8 +2584,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def Wine_Huber_Tree_Regression(Xtrain, Xtest, Ytrain):\n",
@@ -2586,15 +2600,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SVM"
+    "# SVM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def Wine_SVM_Regression(Xtrain, Xtest, Ytrain):\n",
@@ -2612,22 +2624,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sent_sums = pd.read_json('C:/Users/Eason/Downloads/sentiment_sums.json')\n",
-    "sent_prob = pd.read_json('C:/Users/Eason/Downloads/sentiment_probabilities.json')"
+    "sent_sums = pd.read_json('/Users/alexanderdowney/Downloads/sentiment_sums.json')\n",
+    "sent_prob = pd.read_json('/Users/alexanderdowney/Downloads/sentiment_probabilities.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = Transform_df_to_X(df)\n",
@@ -2637,7 +2647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -2656,16 +2666,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.54505233710434298"
+       "0.52097272672305839"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2683,53 +2693,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def test_cv(model):\n",
-    "    scores = []\n",
+    "    scores_m1 = []\n",
+    "    scores_m2 = []\n",
+    "    scores_m3 = []\n",
+    "    scores_m4 = []\n",
     "    for k in range(0, 10):\n",
     "        X_tr, X_te, y_tr, y_te = train_test_split(X_train, y_train, test_size=0.1, random_state=k)\n",
     "        train_data_input = X_tr\n",
     "        train_data_output = y_tr\n",
     "        test_data_input = X_te\n",
     "        y_pred = model(train_data_input, test_data_input, train_data_output)\n",
-    "        print(R2_score(y_pred,y_te))\n",
-    "        scores.append(R2_score(y_pred,y_te))\n",
+    "        m1,m2,m3,m4 = report_metrics(y_pred, y_te)\n",
+    "        scores_m1.append(m1)\n",
     "    return np.mean(scores)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Linear Models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.519934595656\n",
-      "-6879102724.53\n",
-      "-3.4591229545e+14\n",
-      "0.46005117054\n",
-      "-0.00452853427182\n",
-      "0.395887701039\n",
-      "-2.40044292135e+14\n",
-      "0.377584540786\n",
-      "-41131133893.6\n",
-      "0.408232767257\n"
+      "0.525412447572\n",
+      "-14497263824.8\n",
+      "-1.99050886622e+15\n",
+      "0.465928065788\n",
+      "0.445284613321\n",
+      "0.40141297576\n",
+      "-9.78971130838e+13\n",
+      "0.382128290783\n",
+      "-659376895422.0\n",
+      "0.413046996606\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-58600459782138.859"
+       "-208907985346048.91"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2740,45 +2760,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.221482064427\n",
+      "0.137945465855\n",
+      "0.194335022336\n",
+      "0.247014392574\n",
+      "0.20276116814\n",
+      "0.179231145496\n",
+      "0.228518428829\n",
+      "0.130022343738\n",
+      "0.236034703214\n",
+      "0.16623085918\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.19435755937888269"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_cv(Wine_Huber_Linear_Regression)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Trees"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.618240616016\n",
-      "0.527496512269\n",
-      "0.586613851107\n",
-      "0.509047880202\n",
-      "0.713807504595\n",
-      "0.655002732108\n",
-      "0.595209142016\n",
-      "0.481556404725\n",
-      "0.571169988208\n",
-      "0.554791836288\n"
+      "0.485123927596\n",
+      "0.469803494921\n",
+      "0.288900832881\n",
+      "0.417314395896\n",
+      "0.566034518136\n",
+      "0.609279897428\n",
+      "0.573065085297\n",
+      "0.523936607023\n",
+      "0.510202904708\n",
+      "0.556083086162\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.58129364675345629"
+       "0.4999744750048068"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2789,34 +2841,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.619497202272\n",
-      "0.568407008769\n",
-      "0.590564310941\n",
-      "0.517306067095\n",
-      "0.691262731614\n",
-      "0.663604408799\n",
-      "0.622966585741\n",
-      "0.497795022386\n",
-      "0.574970769924\n",
-      "0.587760485194\n"
+      "0.653489398535\n",
+      "0.489712223622\n",
+      "0.632240060847\n",
+      "0.572022477462\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.59341345927343758"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2832,6 +2870,13 @@
    "outputs": [],
    "source": [
     "test_cv(Wine_Huber_Tree_Regression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SVM"
    ]
   },
   {
@@ -2854,7 +2899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -2867,69 +2912,92 @@
     "    train_data_output = y_train\n",
     "    test_data_input = X_test\n",
     "    y_pred = model(train_data_input, test_data_input, train_data_output)\n",
+    "    #for i in range(0,len(y_pred)):\n",
+    "    #print(\"Guess:\",y_pred[i],\"Actual:\",y_train[i])\n",
     "    #score = metrics.mean_absolute_error(y_test,y_pred)\n",
     "    score  = R2_score(y_pred,y_test)\n",
     "    return score"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.54586911487145573"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "#### Linear Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_score(Wine_LinLstSq_Regression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_score(Wine_Huber_Linear_Regression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "test_score(Wine_Decision_Tree_Regression)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5620340050091176"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_score(Wine_Random_Forest_Regression)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.39501107998454066"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_score(Wine_Random_Forest_Regression)"
+    "test_score(Wine_Huber_Tree_Regression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_score(Wine_SVM_Regression)"
    ]
   },
   {
@@ -2951,6 +3019,15 @@
     "    writer = csv.writer(output, lineterminator ='\\n')\n",
     "    writer.writerows(X)"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "output_array = np.array(target)\n",
+    "csvfile = \"/Users/alexanderdowney/Desktop/winedatayvector.csv\"\n",
+    "np.savetxt(csvfile, output_array, delimiter=\",\")"
+   ]
   }
  ],
  "metadata": {
@@ -2969,7 +3046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
